# MyAssistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/myassistant/: __init__.py  __main__.py  chatbot.py  supabase_client.py  terminal.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20250102221822_init.sql  20250102221823_prompts.sql  20250102222619_models.sql  20250102222624_chats.sql  20250102230854_users.sql
