[project]
name = "myassistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fkb56", email = "fkcb@live.fr" }
]
dependencies = [
    "openai>=1.58.1",
    "python-dotenv==1.0.1",
    "supabase>=2.11.0",
    "pick>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"myassistant" = "myassistant:chatbot.main"
"terminal" = "myassistant:terminal.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/myassistant"]
